css/style.css
* {
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

html,
body {
    font-size:  100%;
    font-family: 'Lato', sans-serif;
    margin: 0;
    color: #333;
    letter-spacing: 1px;
    line-height: 1.5rem;
}

body {
    max-width: 1400px;
    margin: 0 auto; 
}

p,
ul li,
ol li {
    margin: 0;
    font-size: 14px;
    letter-spacing: 1px;
}

h1, h2, h3, h4, h5, h6 {
    text-transform: uppercase;
    margin: 0;
}

ul,
label {
    margin: 0;
    padding: 0;
}

body a:hover {
    text-decoration: none;
}


/*COLORS*/

.text-yellow {
    color: #E2AA03
}

.bg-yellow {
    background: #E2AA03
}

.bg-white {
    background-color: #F7F7F7;
}

.fa-check {
    color: #4fc680;
}

/*==================================================
Layout
==================================================*/
#about, #exp, #skills {
    padding: 35px 5px 48px;
}


/*==================================================
HEADER - section with my name and position
==================================================*/

header {
    background: url(../images/banner.jpg) no-repeat center top;
    background-size: cover;
}

.banner {
    text-align: center;
    padding-top: 2em;
}

.banner h2 {
    border: #fff 3px solid;
    margin: 0 auto 5px;
    padding: 10px;
    width: 60%;
    font-size: 1.3em;
    letter-spacing: 4px;
    -webkit-animation-delay: 1s;
    animation-delay: 1s;
}

.banner span {
    color: #CCCCCC;
    font-size: .85em;
    -webkit-animation-delay: 1.5s;
    animation-delay: 1.5s;
    -webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, .4);
    box-shadow: 0 2px 3px rgba(0, 0, 0, .4);
}
/*END HEADER*/


/*=============================================
Main Navigation
==============================================*/

.navbar {
    margin: 0;
}

.navbar-default .navbar-nav>li>a:focus {
    color: orange;
    border-bottom: orange 3px solid;
}

.navbar-nav li:not(:first-child) {
    border-right: .5px solid rgba(192, 192, 192, .5);
    border-left: .5px solid rgba(192, 192, 192, .5);
}

/*=============================================
About Me 
==============================================*/

/* TODO: cleanup messy stuff 
    section layout(padding, margin)
    section heading ( 1 style onlu) - add to defaults / or text
*/

#about .about_me_text h1 {
    color: #000
}

#about .about_me_text p {
    margin: 15px auto 0;
    text-align: center;
    max-width: 550px;
}

#about .about_me_text p:last-child {
    margin-bottom: 20px;
}

.image-container {
    text-align: center; 
    margin-bottom: 20px;
}

#about .card_email {
    margin-bottom: 15px;
    border-radius: 5px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    padding: 10px;
    color: #fff;
    text-align: center;
    max-width: 300px;
    margin: 0 auto;
}

#about .card_email p {
    font-size: 16px;
}

#about .my_image {
    width: 200px;
    height: 200px;
    border-radius: 50%;
    border: 3px solid #fff;
}

/*=============================================
SKills Section 
==============================================*/

#skills {
    background: #212121;
    color: #F7F4F7;
}

.skills-sec-heading{
   letter-spacing: 1px;
}

.pie-charts-container
{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.pie-charts-container .item {
    position: relative;
    padding: 0 2.5rem;
    margin-bottom: 15px;
}

.pie-charts-text {   
    letter-spacing: 1.2px;
}

/* seems to center the text to the inside the pie. TODO: rename */


.pie-value {
    display: block;
    position: absolute;
    font-size: 20px;
    top: 30%;
    left: 0;
    right: 0;
    color: #eb5424;
}

/*END OF SVG ICONS SEC*/

#dev_text ul li {
    color: floralwhite;
}

#dev_text h6 {
    color: #F1CC15;
}

#exp h3 {
    margin-bottom: 30px;
    font-size: 36px;
}

.exp_card {
    visibility: hidden;
    margin: 1em 5px;
    border: 1px solid #ddd;
    border-left: none;
    border-right: none;
    border-top: none;
    padding: 1em 10px;
    -webkit-transition: 0.3s;
    transition: 0.3s;
    background: #fff;
}

#exp h3 {
    text-align: center;
}

.exp_card span {
    font-size: .8em;
}

.exp_job_year_info {
    float: left;
    width: 100%;
    margin-bottom: 15px;
}

.exp_job_year_info h4 {
    letter-spacing: 2px;
    font-size: 16px !important;
    color: #333;
    text-transform: uppercase;
    text-align: center;
    margin-bottom: 10px;
}

.exp_job_year_info strong {
    /*font: normal normal 2.125em/1.33em 'Lato';*/
    text-transform: uppercase;
    margin: 0;
    color: green;
}

.exp_job_year_info h6 {
    text-transform: uppercase;
    font-size: 14px;
    letter-spacing: 2px;
    text-align: center;
    padding-top: 10px;
}

.exp_job_enum {
    text-align: left;
    line-height: 1.5;    
}

.exp_job_enum h4 {
    text-align: center;
    font-size: 24px;
}

.exp_job_enum ul li {
    list-style-type: none;
    padding: 5px;
    /*    text-align: left;*/
}

.exp_indie h4 { font-size: 18px;}

.exp_job_enum p{    
    text-align: center;
}


/*PORTFOLIO SECTION STYLES*/

#portfolio {
    padding: 5%;
}

.github-card {
    /* -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .5);
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .5); */
    -webkit-transition: 0.300s;
    transition: 0.300s;
    transition: 0.3s;
    margin-bottom: 30px;
    visibility: hidden;
    height: 400px;
    background: #fff;
}


.github-card .card-image {
    height: 240px; 
    overflow: hidden;
    width: 100%;
}

.card-image img {
    height: 100%;
    width: auto;
}

.github-card .card-content {
    padding: 10px 20px 10px;
    font-size: 1.5rem;
    height: 150px;
    overflow: hidden;    
    border-top: 1px solid rgba(160,160,160,0.2);
}

.card-title {
    line-height: 2.5rem;
}

/* card action = the icon skills found on the portfolio cards */
.card-action {
    padding: 1.6rem 0 0;
}

.portfolio_grid {
    margin: 2em 0 0 0;
}

.hovereffect {
    width: 100%;
    height: 100%;
    position: relative;
}

.icon-circle {
    background-color: #F1F3F4;
    width: 55.5px;
    height: 55.5px;
    /* padding: 10px 16px; */
    border-radius: 55.5px;
    font-size: 24px;
    margin-right: 9px;
}

.icon-circle img{
    width: 30px;
    height: 30px;
}

/*-- //portfolio --*/


/*-- footer --*/

footer {
    padding: 32px 0;
    background: #212121;
}

footer h4 {
    /*    font-family: 'Open Sans', sans-serif;*/
    font-size: 18px;
    padding: 5px;
    color: #F1CC15;
}

footer li,
footer li a {
    color: #fff;
}

footer ul li{ margin-bottom: 8px;}


/*-- //footer --*/


/*HELPERS*/
.break-word {
    overflow-wrap: break-word;
    word-wrap: break-word;
}

.hanging_indents {
    padding-left: .7em;
    text-indent: -.7em;
    margin-left: 10px;
}

.shadow {
    -webkit-box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
    -moz-box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
}

.m-b-1{
    margin-bottom: 2rem;
}



#skills .flex-icon-container img{
    width: 50px;
    height: 50px;
    margin: 10px;;
}

.flex-icon-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    /* border: red 2px solid; */
}

.flex-icon-container span {
    max-width: 100%;
    overflow: hidden;
    text-align: center;
    display: block;
}

.flex-icon-container > div.icon {
    max-width: 100px;
    text-align: center;
}


/* 
    PLUGIN RELATED
*/
/*-- to-top: | UItoTop jQuery Plugin 1.2 --*/

#toTop {
    display: none;
    text-decoration: none;
    position: fixed;
    bottom: 2rem;
    right: 2rem;
    overflow: hidden;
    z-index: 999;
    width: 51px;
    height: 51px;
    border: none;
    text-indent: 100%;
    background: url(../images/arrow.png) no-repeat 0px 0px;
}

#toTop:hover{
    opacity: .9;
}
#toTopHover {
    
    width: 51px;
    height: 51px;
    display: block;
    overflow: hidden;
    float: right;
    opacity: .5;
    -moz-opacity: 0;
    filter: alpha(opacity=0);
}

#toTop:active,
#toTop:focus {
    outline: none;
}

